# detector-opt

./: .gitignore  Makefile  design.json  generate.profile  pyproject.toml  subgradient.json
config/: config.yaml  lfi.yaml  regress.yaml  subgradient.yaml  vae.yaml
config/detector/: simple_straw.yaml  straw.yaml
config/discriminator/: cnn.yaml  deep-set-128.yaml  deep-set-lfi-128.yaml  resnet-32.yaml
config/generator/: cvae.yaml  deep-set-vae-64.yaml  hyper-vae.yaml  mlp-vae.yaml
config/method/: subgradient.yaml
config/model/: resnet-128.yaml
config/regressor/: cnn.yaml  deep-set-128.yaml  deep-set-24.yaml  deep-set-256.yaml  hyper-resnet-32.yaml  resnet-128.yaml
detopt/: __init__.py
detopt/detector/: __init__.py  common.py  simple_straw.py  straw.py  straw_detector.c  straw_detector.pyi  straw_signal.py  utils.py
detopt/detectors/: __init__.py  common.py  straw.py  straw_detector.c
detopt/nn/: __init__.py  common.py  discriminator.py  generator.py  regression.py  regressor.py
detopt/optimizer/: __init__.py  common.py  subgradient.py
detopt/utils/: __init__.py  config.py  encoding.py  io.py  progress.py
detopt/utils/viz/: __init__.py  losses.py  straw.py
scripts/: lfi.py  regression.py  regressor.py  subgradient.py  vae.py  viz.py
tests/: test_activation.py  test_encoding.py  test_event_file.py  test_generator.py  test_regressor.py  test_solve.py  test_subgradient.py
